# troshka

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  OCP_INSTALL_RESULTS.md  README.md  _typos.toml  dev-services.sh  mockup.html  pyrightconfig.json
src/backend/: alembic.ini  pyproject.toml  requirements.txt
src/backend/alembic/: env.py
src/backend/alembic/versions/: 013fa3ada6b4_add_storage_pools_and_shared_cache.py  05ed40da618c_add_recert_to_patterns.py  0642f947d40f_add_troshkad_fields_to_hosts.py  068c16405f3e_add_elastic_ips_table_and_host_max_eips.py  06a1ab2607a5_add_clock_target_to_projects.py  0e05ca4755c7_rename_filestore_columns_to_netapp.py  157d0b22ab2b_add_deploy_step_and_deploy_progress_to_.py  19518c5edd14_add_tags_to_projects.py  31a4e434ad56_add_private_ip_to_hosts.py  350535bf9ed3_add_ca_cert_and_key_to_storage_pools.py  37afa3d5061d_add_deploy_error_and_vni_map_to_projects.py  3ae4e810ade5_add_ocp_status_detail_to_projects.py  3bb8922de96c_add_storage_warnings_to_hosts.py  3f3d7e866ac0_add_auto_stopped_flag.py  3fc2aa69be81_add_project_portal_tokens_table.py  42885b1dab8b_add_ocp_pull_secret_to_users.py  45e4854e140d_add_rh_offline_token_to_users.py  50dd52c25702_add_system_config_table.py  5f780b5709f9_add_source_url_to_library_items.py  609122eac194_add_source_and_source_provider_id_to_.py  624528265050_add_registry_credentials.py  6cb96e6a5fab_add_guest_exec_enabled_to_projects.py  88043a868aa7_add_nfs_port_to_storage_pools.py  8d54bbd22bdc_add_gcp_and_azure_provider_and_storage_.py  8ff16b45821c_add_auto_extend_columns_to_storage_.py  9050f4789cd3_add_eip_port_map_and_provider_max_eips.py  962f65a3f579_add_console_domain_to_hosts.py  99cc69011416_rename_default_ami_to_default_image.py  9e29d0fc6843_add_pattern_buffer_columns_to_storage_.py  a1b2c3d4e5f6_add_storage_size_gb_to_hosts.py  aa8a957d6c51_add_project_auto_timers.py  b4acffe6bbec_add_clock_target_to_patterns.py  bae1da85d4a2_add_pb_auto_sleep_columns.py  c4d6da4761cd_add_deployed_topology_to_projects.py  c6db35dc1084_add_user_ssh_keys_table.py  c9186a2edfdb_add_ocp_install_elapsed_to_projects.py  d8f5d6d8dce9_add_console_columns_to_providers.py  da688a4c0eac_add_deploy_started_at_to_projects.py  dbf91986fccb_change_size_bytes_to_bigint.py  e66ef9d238cf_add_operator_digest_to_hosts.py  (+6 more)
src/backend/app/: main.py
src/backend/app/api/: api_keys.py  auth.py  disks.py  dns_providers.py  eips.py  hosts.py  library.py  networks.py  patterns.py  portal.py  projects.py  providers.py  registry_credential_routes.py  storage_pools.py  templates.py  users.py  vms.py  ws.py
src/backend/app/core/: auth.py  config.py  database.py  encryption.py  rate_limit.py  redis.py
src/backend/app/models/: __init__.py  api_key.py  disk.py  dns_provider.py  elastic_ip.py  host.py  library.py  network.py  pattern.py  portal.py  project.py  provider.py  registry_credential.py  storage_pool.py  system_config.py  user.py  vm.py
src/backend/app/schemas/: auth.py  disk.py  dns_provider.py  host.py  library.py  network.py  pattern.py  project.py  provider.py  storage_pool.py  user.py  vm.py
src/backend/app/services/: agent_ca_service.py  agent_deployer.py  auto_layout.py  central_library.py  clock_service.py  cloud_init.py  console_dns.py  console_proxy.py  deploy_service.py  dns_service.py  eip_service.py  (+25 more)
src/backend/config/: config.local.yaml.example  config.yaml
src/backend/templates/: bastion-builder.yaml  example.yaml  ocp-cluster.yaml  ocp-compact.yaml  ocp-ran-5g.yaml  ocp-sno.yaml  ocp-standard.yaml
src/backend/tests/: conftest.py  test_agent_template.py  test_app.py  test_auth.py  test_bmc_deploy.py  test_build_image_api.py  test_cert_cleanup.py  test_cloud_init.py  test_config.py  test_console_dns.py  test_database.py  test_deploy_template.py  test_disks.py  test_dns_providers.py  test_dns_service.py  test_eip_service.py  test_event_publisher.py  test_gc.py  test_haproxy_config.py  test_health_poller.py  test_image_builder_service.py  test_integration_agnosticd.py  test_kubevirt_provider.py  test_library_seed.py  test_library_upload_proxy.py  test_migration_service.py  test_models.py  test_networks.py  test_ocpvirt_driver.py  test_ocpvirt_route_access.py  test_patterns.py  test_portal.py  test_project_timer.py  test_projects.py  test_provider_driver.py  test_provider_gc.py  test_provider_model.py  test_pull_through_registry.py  test_rh_token.py  test_s3_endpoint_url.py  (+8 more)
(+301 files in other folders)
