[project]
name = "troshka"
version = "0.1.0"
description = "Nested VM Environment Builder"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "pydantic>=2.0",
    "dynaconf>=3.2",
    "pyjwt>=2.8",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "boto3>=1.34",
    "cryptography>=43.0",
    "kubernetes>=29.0",
    "jwcrypto>=1.5",
    "redis>=5.0",
    "websockets>=12.0",
    "pyyaml>=6.0",
    "azure-identity>=1.15",
    "azure-mgmt-compute>=30.0",
    "azure-mgmt-network>=25.0",
    "azure-mgmt-storage>=21.0",
    "azure-mgmt-dns>=8.1",
    "azure-mgmt-privatedns>=1.1",
    "azure-mgmt-marketplaceordering>=1.1",
    "google-cloud-compute>=1.17",
    "google-cloud-dns>=0.35",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "E501",   # line-too-long (black handles formatting)
    "E402",   # module-import-not-at-top (needed for sys.path and SQLite patches)
    "E741",   # ambiguous-variable-name (l, O, I — used intentionally)
    "N806",   # non-lowercase-variable-in-function (uppercase constants like GW_Y)
    "N814",   # camelcase-imported-as-constant (e.g. Column as C)
    "N817",   # camelcase-imported-as-acronym
    "UP031",  # printf-string-formatting (% formatting in MAC generators)
    "F821",   # undefined-name (false positives from conditional imports)
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["F405"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
